Fix bug #17 buttons alignment

--- a/blueprint/plugins/buttons/screen.css
+++ b/blueprint/plugins/buttons/screen.css
@@ -13,7 +13,7 @@
 a.button, button {
   display:block;
   float:left;
-  margin:0 0.583em 0.667em 0;
+  margin: 0.7em 0.5em 0.7em 0;
   padding:5px 10px 5px 7px;   /* Links */
   
   border:1px solid #dedede;
